--- a/www/style/main.css
+++ b/www/style/main.css
@@ -116,7 +116,7 @@ hr {
   margin-bottom: 30px; }
 
 .container {
-  width: 500px;
+  width: 750px;
   margin: 0 auto; }
 
 @-webkit-keyframes fade-in {
@@ -314,36 +314,44 @@ hr {
   transform: translate(363px, 363px); }
 
 .tile {
+
   position: absolute;
   -webkit-transition: 100ms ease-in-out;
   -moz-transition: 100ms ease-in-out;
   transition: 100ms ease-in-out;
   -webkit-transition-property: -webkit-transform;
   -moz-transition-property: -moz-transform;
-  transition-property: transform; }
+  transition-property: transform; 
+  font-size: 1vmin;}
   .tile .tile-inner {
     border-radius: 3px;
     background: #eee4da;
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 1vmax; }
+	}
   .tile.tile-2 .tile-inner {
     background: #eee4da;
+	font-size:24px; 
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-4 .tile-inner {
+  .tile.tile-4 .tile-inner { 
+  font-size:20px; 
     background: #ede0c8;
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
+  font-size:18px; 
     color: #f9f6f2;
     background: #f2b179; }
   .tile.tile-16 .tile-inner {
+  font-size:17px; 
     color: #f9f6f2;
     background: #f59563; }
-  .tile.tile-32 .tile-inner {
+  .tile.tile-32 .tile-inner { 
+  font-size:18px; 
     color: #f9f6f2;
     background: #f67c5f; }
-  .tile.tile-64 .tile-inner {
+  .tile.tile-64 .tile-inner { 
+  font-size:18px; 
     color: #f9f6f2;
     background: #f65e3b; }
   .tile.tile-128 .tile-inner {
